# wisaya

./: .gitmodules  CMakeLists.txt  README.md
include/: wsyapp.hpp  wsyassert.hpp  wsyclock.hpp  wsydef.h  wsydef.hpp  wsylog.hpp  wsymemory.hpp
include/event/: WisayaApplicationEvent.hpp  WisayaEvent.hpp  WisayaKeyEvent.hpp  WisayaMouseEvent.hpp  wsyApplicationEvent.hpp  wsyEvent.hpp  wsyKeyEvent.hpp  wsyMouseEvent.hpp
include/input/: wsyKeyCode.hpp  wsyMouseCode.hpp
include/type/: wsyBasicType.h  wsyBasicType.hpp  wsyStringType.hpp
src/: CMakeLists.txt  Wisaya_pch.hpp  test.c  test.h
src/platform/: CMakeLists.txt
src/platform/opengl/: CMakeLists.txt  OpenGLContext.cpp  OpenGLContext.hpp
src/platform/windows/: CMakeLIsts.txt  WindowsWindow.cpp  WindowsWindow.hpp
src/wisaya/core/: CMakeLists.txt  WAppDelegate.cpp  WAppDelegate.hpp  WAppLog.cpp  WAppLog.hpp  WAppMain.hpp  WAppTime.cpp  WAppTime.hpp  WAppWindow.cpp  WAppWindow.hpp  appdelegate.cpp  appdelegate.hpp  appentry.hpp  logger.cpp  logger.hpp  main.hpp
src/wisaya/rendering/: CMakeLists.txt  WisayaContext.cpp  WisayaContext.hpp  WisayaRenderer.cpp  WisayaRenderer.hpp
testApp/src/: CMakeLists.txt  main.cpp  testApp.cpp
